cmake_minimum_required(VERSION 3.28)
project(DataStructure)

set(CMAKE_CXX_STANDARD 14)

add_executable(DataStructures main.cpp
        SortingTechniques/BubbleSort.cpp
        SortingTechniques/SortingTechniques.h
        Common/Utils.cpp
        Common/Utils.h
        SortingTechniques/SelectionSort.cpp
        SortingTechniques/InsertionSort.cpp
        SortingTechniques/CountingSort.cpp
        SortingTechniques/MergeSort.cpp
        SortingTechniques/ShellSort.cpp
        SortingTechniques/QuickSort.cpp
        LinearDS/Stack.cpp
        LinearDS/Stack.h
        LinearDS/Queue.cpp
        LinearDS/Queue.h
        LinearDS/SingleLinkedLists.cpp
        LinearDS/SingleLinkedLists.h
        LinearDS/DoubleLinkedList.cpp
        LinearDS/DoubleLinkedList.h
        SortingTechniques/BucketSort.cpp
        SortingTechniques/RadixSort.cpp
        NonLinearDS/Graphs/BreadthFirstSearch.cpp
        NonLinearDS/Graphs/Graphs.h
        NonLinearDS/Graphs/Graphs.cpp
        NonLinearDS/Graphs/DepthFirstSearch.cpp
        NonLinearDS/Graphs/BFS_ShortestPathAlgorithm.cpp
        NonLinearDS/Graphs/BFS_ShortestPathOnGrid.cpp
        NonLinearDS/Graphs/TopologicalSortAdjacencyList.cpp
        NonLinearDS/Graphs/Dijkstra_SingleSourceShortestPath.cpp
        NonLinearDS/Graphs/BellManFord_SSSP.cpp
        NonLinearDS/Graphs/FloydWarshall_AllPairShortestPath.cpp
        NonLinearDS/Graphs/EulerianPath.cpp
        NonLinearDS/Graphs/Bridges.cpp
        NonLinearDS/Graphs/ArticulationPoints.cpp
        UnionFind/UnionFind.cpp
        UnionFind/UnionFind.h
        NonLinearDS/Graphs/KruskalsMinSpanningTree.cpp
        NonLinearDS/Graphs/PrimsMinSpanningTree_Lazy.cpp
        NonLinearDS/Graphs/MaxNetworkFlow_FordFulkerson.cpp
        NonLinearDS/Graphs/MaxNetworkFlow_EdmondsKarp.cpp
        NonLinearDS/Graphs/Tarjans_StronglyConnectedComponents.cpp
        Search/LinearSearch.cpp
        Search/Search.h
        Search/BinarySearch.cpp
        Search/TernarySearch.cpp
        Search/InterpolationSearch.cpp
        NonLinearDS/Trees/BinarySearchTrees.cpp
        NonLinearDS/Trees/Trees.h
        NonLinearDS/Trees/AVLTree.cpp
        NonLinearDS/Trees/RedBlackTree.cpp
        NonLinearDS/Trees/BTree.cpp
        NonLinearDS/Trees/B+Tree.cpp
        NonLinearDS/Trees/Trie.cpp
        NonLinearDS/Heap/MaxHeap.cpp
        NonLinearDS/Heap/Heap.h
        NonLinearDS/Heap/HeapSort.cpp
        NonLinearDS/Heap/MinHeap.cpp
        Algorithms/Array/MaximimSubArraySum.cpp
        Algorithms/Algorithms.h
        Algorithms/Array/MaximumSubArraySum_KadaneAlgo.cpp
        Algorithms/Array/MissingNumber.cpp
        Algorithms/Array/TrappingWaterProblem.cpp
        Algorithms/Array/TrappingWaterProblem_Optimised_ExtraSpace.cpp
        Algorithms/Array/TrappingWaterProblem_Optimised_DoublePointers.cpp
        Algorithms/Array/MaximumSubArrayProduct.cpp
        Algorithms/Array/MaximumSubArrayProduct_Optimised.cpp
        Algorithms/Array/EqlibriumPoint.cpp
        Algorithms/Array/EquilibriumPoint_Optimised_UsingSpace.cpp
        Algorithms/Array/EquilibriumPoint_Optimised_WithoutUsingSpace.cpp
        Algorithms/Array/Leaders.cpp
        Algorithms/Array/Leaders_Optimised.cpp
        Algorithms/Array/RotateArray.cpp
        Algorithms/Array/KthLargestNumber.cpp
        Algorithms/Array/KthLargestNumber_Optimised_HeapSort.cpp
        Algorithms/Array/MaxPlatforms.cpp
        Algorithms/Array/MaxPlatforms_Optimised_UsingSort.cpp
        Algorithms/Array/BotanicSequenceMaxLength.cpp
        Algorithms/String/LongestPalindromicSubString.cpp
        Algorithms/Array/PairWithGivenSum.cpp
        Algorithms/Array/PairWithGivenSum_Optimised1.cpp
        Algorithms/Array/PairWithGivenSum_Optimised2.cpp
        Algorithms/Array/PairWithGivenSum_Optimised3.cpp
        Algorithms/Array/StockBuySell_1_Transaction.cpp
        Algorithms/Array/StockBuySell_1_Transaction_Optimisedv1.cpp
        Algorithms/Array/FindMinElementInSortedRotatedArray.cpp
        Algorithms/Array/BinarySearchRotatedArray.cpp
        Algorithms/Array/ContainerWithMostWater_Optimised.cpp
        Algorithms/Array/InsertInterval_Optimised.cpp
        Algorithms/Array/MergeOverlappingIntervals.cpp
        Algorithms/Array/FindNonOverlappingIntervals.cpp
        Algorithms/Matrix/SpiralTraversal_v1.cpp
        Algorithms/String/ReverseWords.cpp
        Algorithms/String/ClosestString.cpp
        Algorithms/String/IsomorphicStrings.cpp
        Algorithms/String/K-Anagrams.cpp
        Algorithms/String/IsPanagrams.cpp
        Algorithms/String/NosDeletionsToMakePalindrome.cpp
        Algorithms/String/CheckIfStringsAreEqualAfterRotations.cpp
        Algorithms/String/LongestCommonSubsequence.cpp
        Algorithms/String/ValidateIPAddress.cpp
        Algorithms/String/LongestPalindromicSubSequence.cpp
        Algorithms/String/IsSubSequence.cpp
        Algorithms/String/FindLongestWordInDictionary.cpp
        Algorithms/String/AddLargeNumbers.cpp
        Algorithms/String/MultiplyLargeNumbers.cpp
        Algorithms/String/SubStringReplacement.cpp
        Algorithms/String/LongestPrefixAndSuffix.cpp
        Algorithms/String/SmallestSubstringContainingAllCharactersOfOtherString.cpp
        Algorithms/String/LongestSubstringOfUniqueCharacters.cpp
        Algorithms/String/StrStrKnuthMorrisPratt.cpp
        Algorithms/String/StrStrRabinKarp.cpp
        Algorithms/String/CountOpsToConvStr1ToStr2.cpp
        Algorithms/String/ShortestCommonSuperSequence.cpp
        Algorithms/Array/Sort012_DutchNationalFlagAlgo.cpp
        Algorithms/Array/MoveNegativesOnLeft.cpp
        Algorithms/Array/MajorityElement_MooreVotingAlgorithm.cpp
        Algorithms/Array/SortArrayInWaveForm.cpp
        Algorithms/Array/SubArrayWithTargetSum.cpp
        Algorithms/Array/TwoSum_PairsWithTargetSum.cpp
        Algorithms/Array/FindCommonElementsInThreeSortedArrays.cpp
        Algorithms/Array/ThreeSum_TripletsWithTargetSum.cpp
        Algorithms/Array/LongestSubArrayWithSum0.cpp
        Algorithms/Array/LongestSubArrayWithequal0and1.cpp
        Algorithms/Array/CountSubArraysWithEqual0sAnd1s.cpp
        Algorithms/Array/FindLongestConsecutiveSubSequence.cpp
        Algorithms/Array/FindSmallestPositiveMissingNumber.cpp
        Algorithms/Array/MissingAndRepeatingNumber.cpp
        Algorithms/Array/MinimizeHeightDifference.cpp
        Algorithms/Array/MaxSumPathInTwoSortedArrays.cpp
        Algorithms/Array/StockSpanProblem.cpp
        Algorithms/Array/StockBuySell_1Transaction.cpp
        Algorithms/Array/LongestAlternatingSubSequence.cpp
        Algorithms/Array/StockBuySell_MultipleTransactions.cpp
        Algorithms/Array/LongestIncreasingSubSequence.cpp
        Algorithms/Array/MaxReachableIndex.cpp
        Algorithms/Array/UnionTwoSortedArrays.cpp
        Algorithms/Array/IntersectionTwoSortedArrays.cpp
        Algorithms/String/Atoi.cpp
        Algorithms/String/GenerateDistinctSubsequence.cpp
        Algorithms/String/NosInsertionsAtBeginToMakePalindrome.cpp
        Algorithms/String/NosInsertionsToMakePalindrome.cpp
        Algorithms/String/NosInsertionsAtBeginToMakePalindrome.cpp
        Algorithms/Matrix/WordSearch.cpp
        Algorithms/Matrix/CountIslands.cpp
        Algorithms/Matrix/FloodFillAlgorithm.cpp
        Algorithms/Matrix/MaximumGridPaths.cpp
        Algorithms/Matrix/ShortestPathInBinaryMaze.cpp
        Algorithms/Matrix/IslandsPerimeter.cpp
        Algorithms/LinkedLists/ReverseSLL.cpp
        Algorithms/LinkedLists/ReverseDLL.cpp
        Algorithms/LinkedLists/RotateSLL.cpp
        Algorithms/LinkedLists/DeleteLastOccurance.cpp
        Algorithms/LinkedLists/MergeSLL.cpp
        Algorithms/LinkedLists/DeleteNodeWithoutHead.cpp
        Algorithms/LinkedLists/PalindromeCheckSLL.cpp
        Algorithms/LinkedLists/MergeKSortedSLL.cpp
        Algorithms/LinkedLists/ReverseSublistofSLL.cpp
        Algorithms/LinkedLists/LoopsInSLL.cpp
        Algorithms/LinkedLists/IntersectionPointInSLL.cpp
        Algorithms/Trees/01_HeightOfTree.cpp
        Algorithms/Trees/02_CheckIfTreesAreIdentical.cpp
        Algorithms/Trees/03_MorrisInorderTraversal.cpp
        Algorithms/Trees/04_MirrorTree.cpp
        Algorithms/Trees/05_SymetricTree.cpp
        Algorithms/Trees/06_DiameterOfTree.cpp
        Algorithms/Trees/07_ZigZagTraversal.cpp
        Algorithms/Trees/08_HeightBalancedTree.cpp
        Algorithms/Trees/09_ChildrenSumPropertyInTree.cpp
        Algorithms/Trees/10_CheckBST.cpp
        Algorithms/Trees/11_InorderSuccessor.cpp
        Algorithms/Trees/12_LargestValueInEachLevel.cpp
        Algorithms/Trees/13_ReverseMorrisTraversal.cpp
        Algorithms/Trees/14_KthLargestElementInTree.cpp
        Algorithms/Trees/15_SortedArrayToBinartSearchTree.cpp
        Algorithms/Trees/16_IsSubTree.cpp
        Algorithms/Trees/17_MorrisIterativeTraversal_In_Pre_Post.cpp
        Algorithms/Trees/18_ReverseLevelOrderTraversal.cpp
        Algorithms/Trees/19_VerticalTraversal.cpp
        Algorithms/Trees/20_BoundaryTraversal.cpp
        Algorithms/Trees/21_CreateBinaryTreeFromParentArray.cpp
        Algorithms/Trees/22_BinaryTreeCreationFromPreAndInOrder.cpp
        Algorithms/Trees/23_BinaryTreeCreationFromPostAndInOrder.cpp
        Algorithms/Trees/24_ConstructBSTreeFromPreOrder.cpp
        Algorithms/Trees/25_CheckArrayIsPreOrderOfBSTree.cpp
        Algorithms/Trees/26_PrintAncestors.cpp
        Algorithms/Trees/27_LowestCommonAncestors.cpp
        Algorithms/Trees/28_FindMaxSumPathLeafToRoot.cpp
        Algorithms/Trees/29_FindDistanceBwNodes.cpp
        Algorithms/Trees/30_CloneBinaryTreeWithRandomPointers.cpp
        Algorithms/Trees/31_RemoveNodesOutsideRangeinBST.cpp
        Algorithms/Trees/32_MaxPairSumInBST.cpp
)
